# ros_autonomous_exploration

./: CMakeLists.txt  Dockerfile  autonomous_exploration.rosinstall  entrypoint.sh  package.xml
action/: Explore.action
include/autonomous_exploration/: Color.h  GridMap.h  PoseWrap.h  VisMarker.h
include/exploration_target/: GridMap.h
launch/: test.launch
src/: .explore_server.cpp.swp  explore_client.cpp  explore_client.html  explore_server.cpp  explore_service.cpp  get_map_server.cpp  test_submap.cpp
srv/: ExploreTarget.srv
